[package]
name = "justify"
version = "0.1.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
description = "Justify plaintext while handling Unicode gracefully"
license = "MIT/Apache-2.0"
keywords = ["justify", "paragraph", "justification", "text"]

[features]
default = []
unicode-width = ["wcwidth"]

[dependencies]
wcwidth = { version = "1.0.1", optional = true }

[profile.release]
lto = true
