[package]
name = "justify"
version = "0.1.2"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
description = "Justify plaintext while handling Unicode gracefully"
license = "MIT/Apache-2.0"
keywords = ["justify", "paragraph", "justification", "text"]
repository = "https://github.com/ctrlcctrlv/justify"
homepage = "https://github.com/ctrlcctrlv/justify"

[features]
default = []
unicode-width = ["wcwidth"]

[dependencies]
wcwidth = { version = "1.0.1", optional = true }

[profile.release]
lto = true
