[package]
name = "justify"
version = "0.1.3"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
description = "Justify plaintext while handling Unicode gracefully"
license = "MIT/Apache-2.0"
keywords = ["justify", "paragraph", "justification", "text"]
repository = "https://github.com/ctrlcctrlv/justify"
homepage = "https://github.com/ctrlcctrlv/justify"

[features]
default = []

[dependencies]
unicode-width = { version = "0.1", optional = true }

[profile.release]
lto = true
